Add login, register, invitations, locales

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=ed48f190e17a46bef54e5b5af15ec725
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+# MAILER_DSN=sendmail://default
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -28,5 +28,10 @@ APP_SECRET=ed48f190e17a46bef54e5b5af15ec725
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:5432/runotab?serverVersion=12.2&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://email:password@default
+###< symfony/google-mailer ###
