--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     app.supported_locales: 'en|ru|cs'
+    photos_directory: '%kernel.project_dir%/public/uploads/photos'
 services:
     # default configuration for services in *this* file
     _defaults:
