Refactor code, add tests, increase security

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -38,4 +38,8 @@
         <extension class="Symfony\Component\Panther\ServerExtension" />
     </extensions>
     -->
+
+    <extensions>
+        <extension class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension"/>
+    </extensions>
 </phpunit>
