--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,6 @@ end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 
-[*.{php, twig, yaml}]
+[*.{php, twig, yaml, js}]
 indent_style = space
 indent_size = 4
